[gd_scene load_steps=39 format=2]

[ext_resource path="res://Textures/player/idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Textures/player/run.png" type="Texture" id=3]
[ext_resource path="res://Textures/select.png" type="Texture" id=4]
[ext_resource path="res://Textures/player/backpack-hold-idle.png" type="Texture" id=5]
[ext_resource path="res://Textures/player/backpack-pickup.png" type="Texture" id=6]
[ext_resource path="res://Textures/player/backpack-hold-run.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Player/AnimationManager.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Player/CrateManager.gd" type="Script" id=9]
[ext_resource path="res://Textures/player/die.png" type="Texture" id=10]
[ext_resource path="res://Fonts/pico.tres" type="DynamicFont" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 12, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 24, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 36, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 12, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 12, 17 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 12, 17 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "die",
"speed": 7.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 4, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 8, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 4, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 8, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 12, 0, 4, 8 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 4, 8 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "pick up",
"speed": 15.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 7, 11 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 4, 4 )

[node name="Player" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 2 )

[node name="MainSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -0.341827 )
scale = Vector2( 1, 0.956731 )
polygon = PoolVector2Array( -3, 9, -3, -2, -1, -4, 1, -4, 3, -2, 3, 9 )

[node name="Selection" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
frame = 3
playing = true
centered = false

[node name="Flippables" type="Node2D" parent="."]

[node name="BackpackSprite" type="AnimatedSprite" parent="Flippables"]
visible = false
position = Vector2( -4, 0 )
z_index = -1
frames = SubResource( 25 )
animation = "run"

[node name="InteractRegion" type="Area2D" parent="Flippables"]
position = Vector2( 6, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippables/InteractRegion"]
shape = SubResource( 26 )

[node name="CrateSpawnLocation" type="Area2D" parent="Flippables"]
position = Vector2( 10, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippables/CrateSpawnLocation"]
shape = SubResource( 27 )

[node name="Managers" type="Node" parent="."]

[node name="CrateManager" type="Node" parent="Managers"]
script = ExtResource( 9 )

[node name="AnimationManager" type="Node" parent="Managers"]
script = ExtResource( 8 )

[node name="Tag" type="Label" parent="."]
margin_left = -28.0
margin_top = -15.0
margin_right = 31.0
margin_bottom = -10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.737255, 0.737255, 0.737255, 1 )
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Flippables/InteractRegion" to="." method="_on_interact_body_enter"]
[connection signal="body_exited" from="Flippables/InteractRegion" to="." method="_on_interact_body_exited"]
